# dci-core-integration

./: CMakeLists.txt
cmakeModules/: dciIntegration.cmake  dciIntegrationMeta.cmake  dciIntegrationMetaFetchTargetRuntimeDeps.cmake  dciIntegrationMetaFetchTargetRuntimeDeps.script  dciIntegrationMetaFetchTargetRuntimeDeps.sh  dciIntegrationSetupTarget.cmake  dciIntegrationSetupTargetCreateLaunchCmd.script  dciIntegrationUnit.cmake
include/dci/integration/: api.hpp  apiDecls.hpp  info.hpp
src/: info.cpp
